# solana-simple-serialization-deserialization

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: lib.rs
tests/: index.ts
