[package]
name = "poc-solana-simple-serialization-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "simple_serialization"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.3.0", features = ["derive"] }
# downgrade to fix error[E0658]: use of unstable library feature 'build_hasher_simple_hash_one'
ahash = "=0.8.6"
solana-program = "1.17.14"
